struct ResultSetData {
  1: list<string> columnNames; // 列名列表
  2: list<list<string>> rows; // 行数据列表
}